--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -3,8 +3,8 @@ title: "Tipologia i cicle de vida de les dades"
 author: "Gerard Cegarra Dueñas"
 date: "December 27, 2021"
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -41,14 +41,14 @@ library(gridExtra)
 
 # 1. Descripció del dataset
 
-Per a aquest projecte s'ha escollit el dataset de la plataforma Kaggle de la competició "Titanic - Machine Learning from Disaster". Les dades estan separades en dos conjunts: entrenament i test. En el conjunt d'entrenament es troben 891 registres corresponents a passatgers que estaven al Titanic en el moment del seu naufragi. Una de les 13 variables indica si el passatger en qüestió va sobreviure a la tragedia. El conjunt de test conté 418 passatgers amb les mateixes variables però sense estar informada la variable que indica la supervivència del passatger. L'objectiu de la competició és predir amb exactitud quines de les 418 persones del conjunt de test van sobreviure i quines no. Les variables del conjunt de dades són les següents:
+Per a aquest projecte s'ha escollit el dataset de la plataforma Kaggle de la competició "Titanic - Machine Learning from Disaster". Les dades estan separades en dos conjunts: entrenament i test. En el conjunt d'entrenament es troben 891 registres corresponents a passatgers que estaven al Titanic en el moment del seu naufragi. Una de les 13 variables indica si el passatger en qüestió va sobreviure a la tragèdia. El conjunt de test conté 418 passatgers amb les mateixes variables, però sense estar informada la variable que indica la supervivència del passatger. L'objectiu de la competició és predir amb exactitud quines de les 418 persones del conjunt de test van sobreviure i quines no. Les variables del conjunt de dades són les següents:
 
 * `PassengerId`: identificador únic del passatger en el conjunt de dades.
 * `Survival`: variable que indica la supervivència del passatger.
-* `Pclass`: classe del ticket del passatger (primera, segona o tercera).
+* `Pclass`: classe del bitllet del passatger (primera, segona o tercera).
 * `Sex`: sexe biològic del passatger.
 * `Age`: edat del passatger.
-* `SibSp`: nombre de parents del passatger a bord (del tipus conjuge/germà).
+* `SibSp`: nombre de parents del passatger a bord (del tipus cónjuge/germà).
 * `Parch`: nombre de parents del passatger a bord (del tipus pare/fill).
 * `Ticket`: número de bitllet del passatger.
 * `Fare`: preu que ha pagat el passatger per estar a bord del vaixell.
@@ -57,7 +57,7 @@ Per a aquest projecte s'ha escollit el dataset de la plataforma Kaggle de la com
 
 # 2. Integració i selecció de les dades
 
-Es mostren el resum de les dades i el tipus de cada variable. Les dades de tipus text no es transformen a factors de moment per a poder-les manipular amb més facilitat. El conjunt de dades d'entrenament i de test es combinen en un únic conjunt amb una columna addicional `Train` que indica la procedencia de cada registre.
+Es mostren el resum de les dades i el tipus de cada variable. Les dades de tipus text no es transformen a factors de moment per a poder-les manipular amb més facilitat. El conjunt de dades d'entrenament i de test es combinen en un únic conjunt amb una columna addicional `Train` que indica la procedència de cada registre.
 
 ```{r data_reading}
 train <- read.csv("data/train.csv", stringsAsFactors = FALSE)
@@ -81,7 +81,7 @@ data$Fare[data$Fare == 0] <- NA
 
 ## 2.1. Creació de nous atributs
 
-En aquest apartat es creen nous atributs a partir de la manipulació de variables ja existents en el conjunt de dades. De la variable `Name`, es pot extreure el títol de la persona (`Title`) i el seu cognom (`FamilyName`). A partir de les variables `Parch`i `SibSp`, es pot calcular el total del nombre de familiars a bord de cadascún dels passatgers (`FamilySize`). Agafant la primera lletra de la variable `Cabin`, es pot extreure la coberta a la qual estava ubicada la cabina del passatger. Finalment, a partir de la variable `Ticket` es poden extreure categories que informen sobre el venedor del tiquet del passatger.
+En aquest apartat es creen nous atributs a partir de la manipulació de variables ja existents en el conjunt de dades. De la variable `Name`, es pot extreure el títol de la persona (`Title`) i el seu cognom (`FamilyName`). A partir de les variables `Parch`i `SibSp`, es pot calcular el total del nombre de familiars a bord de cadascun dels passatgers (`FamilySize`). Agafant la primera lletra de la variable `Cabin`, es pot extreure la coberta a la qual estava ubicada la cabina del passatger. Finalment, a partir de la variable `Ticket` es poden extreure categories que informen sobre el venedor del tiquet del passatger.
 
 ```{r new_attributes}
 
@@ -125,7 +125,7 @@ head(data)
 
 ## 2.2. Discretització i normalització de les variables
 
-A continuació s'afegeixen algunes variables noves més, fruit de la discretització dels valors de les variables `Age` i `FamilySize`. Aquestes variables seran creades com a factors per a poder usar-les en els mètodes d'anàlisi posteriors. En el cas de la variable `Pclass`, mantenir els seus valors numèrics és una opció correcte, ja que les diferents categories mantenen una relació ordenada entre elles.
+A continuació s'afegeixen algunes variables noves més, fruit de la discretització dels valors de les variables `Age` i `FamilySize`. Aquestes variables seran creades com a factors per a poder usar-les en els mètodes d'anàlisi posteriors. En el cas de la variable `Pclass`, mantenir els seus valors numèrics és una opció correcta, ja que les diferents categories mantenen una relació ordenada entre elles.
 
 ```{r discretization}
 data$AgeCat <- as.factor(cut(data$Age, c(0, 20, 60, 80), c("young", "adult", "senior")))
@@ -179,7 +179,7 @@ data <- kNN(
 
 ## 3.2. Valors extrems
 
-L'única variable que pot presentar valors extrems és la variable `Fare`, ja que els valors de la resta de variables numériques cauen dins un rang raonable segons el coneixement que tenim del domini. A continuació es mostra el diagrama de caixes de la variable `Fare` per a tots els registres, i també separats per classe.
+L'única variable que pot presentar valors extrems és la variable `Fare`, ja que els valors de la resta de variables numèriques cauen dins un rang raonable segons el coneixement que tenim del domini. A continuació es mostra el diagrama de caixes de la variable `Fare` per a tots els registres, i també separats per classe.
 
 ```{r outliers}
 
@@ -191,7 +191,7 @@ bp3 <- boxplot(data$Fare[data$Pclass == 3], xlab="Tercera classe", ylab="Fare")
 length(bpt$out); length(bp1$out); length(bp2$out); length(bp3$out)
 ```
 
-Segons la regla intercuartílica, en prendre els valors de la variable `Fare` de tot el conjunt de dades, 174 d'aquests valors es podrien considerar atípics, ja que s'allunyen més de 3 desviacions estàndard de la mitjana. Tot i això, en prendre els valors separats per classe, el total de valors que es podrien considerar com a valors extrems es redueix a 102, distribuits en grups de 29, 12 i 65 passatgers entre la primera, segona i tercera classe respectivament. Aquests registres no s'exclouran del conjunt de dades per al posterior anàlisi perquè la desviació dels seus valors no semblen desorbitats donada la distribució de la variable i no es pot assegurar que siguin errors de mesura.
+Segons la regla interquartílica, en prendre els valors de la variable `Fare` de tot el conjunt de dades, 174 d'aquests valors es podrien considerar atípics, ja que s'allunyen més de 3 desviacions estàndard de la mitjana. Tot i això, en prendre els valors separats per classe, el total de valors que es podrien considerar com a valors extrems es redueix a 102, distribuïts en grups de 29, 12 i 65 elements entre la primera, segona i tercera classe respectivament. Aquests registres no s'exclouran del conjunt de dades per a la posterior anàlisi perquè la desviació dels seus valors no semblen desorbitats donada la distribució de la variable i no es pot assegurar que siguin errors de mesura.
 
 # 4. Anàlisi de les dades
 
@@ -204,20 +204,20 @@ De totes les variables del conjunt, s'estudiaran les següents:
 * Numèriques: `Age`, `SibSp`, `Parch`, `Fare` i `FamilySize`.  
 * Categòriques: `Survived`, `Pclass`, `Sex`, `Embarked`, `CabinLetter`, `TicketSrc`, `AgeCat`, `FamilySizeCat` i `TitleCat`.
 
-Els anàlisis que s'aplicaran són els següents:
+Les anàlisis que s'aplicaran són els següents:
 
 * Numèriques: proves d'hipòtesis sobre la mitjana d'una variable en dues mostres.
-* Categòriques: proves d'hipòtesis sobre la dependència de dues variables (`Survived` respecte les demés).
+* Categòriques: proves d'hipòtesis sobre la dependència de dues variables (`Survived` respecte a les altres).
 
 Els dos grups de variables s'utilitzaran també per a crear un model de regressió logística que predigui la variable `Survived`.
 
 ## 4.2. Comprovació de la normalitat i homogeneïtat de la variància
 
-Per a poder aplicar les proves de contrast d'hipòtesis sobre les variables numèriques, cal assegurar que la mitjana mostral d'aquestes segueix una distribució normal. També és necessàri tenir en compte si al fer la separació de les dades sota els valors de la variable `Survived`, els dos grups presenten homoscedasticitat o no.
+Per a poder aplicar les proves de contrast d'hipòtesis sobre les variables numèriques, cal assegurar que la mitjana mostral d'aquestes segueix una distribució normal. També és necessari tenir en compte si al fer la separació de les dades sota els valors de la variable `Survived`, els dos grups presenten homoscedasticitat o no.
 
 ### 4.2.1. Comprovació de la normalitat
 
-En aquest apartat, es comprova la normalitat de les variables numèriques. La variable `Fare` sembla presentar una distribució exponencial inversa, tal i com es pot veure a la següent visualització, i per tant, la comprovació de normalitat es durà a terme també sobre la transformació logarítmica d'aquesta variable.
+En aquest apartat, es comprova la normalitat de les variables numèriques. La variable `Fare` sembla presentar una distribució exponencial inversa, tal com es pot veure a la següent visualització, i per tant, la comprovació de normalitat es durà a terme també sobre la transformació logarítmica d'aquesta variable.
 
 ```{r fare_dist}
 par(mfrow=c(1,2))
@@ -225,7 +225,7 @@ hist(data$Fare)
 hist(log(data$Fare))
 ```
 
-El test de normalitat sobre la distribució de les dades es porta a terme mitjançant el test de Lilliefors. En tots els casos, el p-valor resultant del test és practicament 0, de manera que es pot rebutjar la hipòtesi nul·la de que els valors han sigut mesurats d'una distribució normal, per a totes les variables, amb un nivell de confiança del 95%.
+El test de normalitat sobre la distribució de les dades es porta a terme mitjançant el test de Lilliefors. En tots els casos, el p-valor resultant del test és pràcticament 0, de manera que es pot rebutjar la hipòtesi nul·la de que els valors han sigut mesurats d'una distribució normal, per a totes les variables, amb un nivell de confiança del 95%.
 
 Tot i que hem comprovat que no es pot assumir la distribució normal de la població de les variables numèriques, podem assumir pel Teorema Central del Límit que la mitjana mostral d'aquestes sí que tindrà una distribució normal, donat que la mida de la mostra és prou gran.
 
@@ -245,7 +245,7 @@ for (var in numVars){
 
 ### 4.2.2. Comprovació de la homogeneïtat de la variància
 
-Quant a la comprovació de la igualtat de variancies, es realitza el test sobre les dues mostres de cada variable al separar els seus registres pels valors de la variable `Survived`. Les mostres de les variables `Age` i `Parch` semblen presentar una variància igual amb un interval de confiança del 95%. En el cas de les variables `Fare`, `SibSp` i `FamilySize`, no hi ha homoscedasticitat. Amb aquesta informació, es realitzaran els test de contrast d'hipòtesis sobre la mitjana.
+Quant a la comprovació de la igualtat de variàncies, es realitza el test sobre les dues mostres de cada variable al separar els seus registres pels valors de la variable `Survived`. Les mostres de les variables `Age` i `Parch` semblen presentar una variància igual amb un interval de confiança del 95%. En el cas de les variables `Fare`, `SibSp` i `FamilySize`, no hi ha homoscedasticitat. Amb aquesta informació, es realitzaran els tests de contrast d'hipòtesis sobre la mitjana.
 
 ```{r var_test}
 dataS0 <- data[data$Survived == 0, ]
@@ -262,7 +262,7 @@ for (var in numVars){
 
 ### 4.3.1. Proves de contrast d'hipòtesis
 
-A continuació es comparen les distribucions de les variables del conjunt d'entrenament sota la separació en dos grups dels registres per la variable `Survived`. Per cadascuna de les variables numèriques, es duen a terme tests d'hipòtesis sobre la mitjana poblacional dels dos grups. Per a les variables categoriques, es comprova si hi ha una diferència estadisticament significativa entre la distribució poblacional de les categories respecte els dos grups.
+A continuació es comparen les distribucions de les variables del conjunt d'entrenament sota la separació en dos grups dels registres per la variable `Survived`. Per cadascuna de les variables numèriques, es duen a terme tests d'hipòtesis sobre la mitjana poblacional dels dos grups. Per a les variables categòriques, es comprova si hi ha una diferència estadísticament significativa entre la distribució poblacional de les categories respecte als dos grups.
 
 ```{r test_contrast}
 homVars <- c(F, T, T, F, F)
@@ -278,7 +278,7 @@ for (var in numVars){
 }
 ```
 
-Amb un nivell de confiança del 95%, no es pot descartar la hipòtesi nul·la de que les mitjanes poblacionals de les variables `SibSp` i `FamilySize` son iguals entre els grups de passatgers que sobreviuen i els que no. Les variables `Age` i `Parch` sí que semblen mostrar una diferència significativa tot i que no podriem assumir-la amb un interval de confiança del 99%. Les mitjanes de la mostra ens indiquen que els sobrevivents són una mica més joves en mitjana i tenen més parents a bord del tipus pare/fill. En el cas de la variable `Fare`, la diferència és molt significativa amb un p-valor pròxim a 0 i unes mitjanes que indiquen que els sobrevivents van pagar, en mitjana, un preu més de dues vegades superior.
+Amb un nivell de confiança del 95%, no es pot descartar la hipòtesi nul·la de que les mitjanes poblacionals de les variables `SibSp` i `FamilySize` són iguals entre els grups de passatgers que sobreviuen i els que no. Les variables `Age` i `Parch` sí que semblen mostrar una diferència significativa, tot i que no es podria assumir-la amb un interval de confiança del 99%. Les mitjanes de la mostra ens indiquen que els sobrevivents són una mica més joves en mitjana i tenen més parents a bord del tipus pare/fill. En el cas de la variable `Fare`, la diferència és molt significativa amb un p-valor pròxim a 0 i unes mitjanes que indiquen que els sobrevivents van pagar, en mitjana, un preu més de dues vegades superior.
 
 
 ```{r chisq_test}
@@ -292,11 +292,11 @@ for (var in catVars){
 }
 ```
 
-Quant a les variables categoriques, totes semblen presentar una diferència significativa en la seva distribució amb un interval de confiança del 95%. Aquelles variables amb un p-valor més baix (`Sex` i `TitleCat`) són les que probablement influeixen més a la probabilitat de supervivència d'un passatger.
+Quant a les variables categòriques, totes semblen presentar una diferència significativa en la seva distribució amb un interval de confiança del 95%. Aquelles variables amb un p-valor més baix (`Sex` i `TitleCat`) són les que probablement influeixen més a la probabilitat de supervivència d'un passatger.
 
 ### 4.3.2. Regressió logística
 
-Finalment, es construeix un model de regressió logística per a estimar la probabilitat de supervivència a partir de les variables seleccionades. Els registres del conjunt d'entrenament se separen en primer lloc en dos subconjunts d'entrenament i test per a avaluar la bondat del model construit. A partir de la regressió construida amb les dades del subconjunt d'entrenament, s'avalua l'exactitud del model per a diferents thresholds de decisió sobre les dades del subconjunt test. Dels valors provats, un threshold de 0.5 és el que dona el millor resultat amb una exactitud de 0.8715084. Es pot comprovar a la corba ROC com aquest threshold és una de les millors opcions en quant al balanç entre els ràtios de positius vertaders i falsos.
+Finalment, es construeix un model de regressió logística per a estimar la probabilitat de supervivència a partir de les variables seleccionades. Els registres del conjunt d'entrenament se separen, en primer lloc, en dos subconjunts d'entrenament i test per a avaluar la bondat del model construït. A partir de la regressió construïda amb les dades del subconjunt d'entrenament, s'avalua l'exactitud del model per a diferents thresholds de decisió sobre les dades del subconjunt test. Dels valors provats, un threshold de 0.5 és el que dona el millor resultat amb una exactitud de 0.8715084. Es pot comprovar a la corba ROC com aquest threshold és una de les millors opcions en quant al balanç entre les ràtios de positius vertaders i falsos.
 
 També s'observa als coeficients del model com les variables categòriques amb un p-valor més baix en l'anàlisi de comparació de la distribució (`Sex` i `TitleCat`), són de les que tenen valors més significatius a l'hora de predir la probabilitat de supervivència. Es penalitza la categoria `male` de la variable `Sex` i totes les categories de la variable `TitleCat` tret de la categoria `Master`.
 
@@ -364,7 +364,7 @@ write.csv(test[, c("PassengerId", "Survived")], "data/result.csv", row.names = F
 
 En aquest apartat es visualitzen els resultats obtinguts en les anàlisis de les dades de l'apartat anterior. 
 
-Sobre les variables numèriques, s'ha pogut comprobar com per algunes d'aquestes (`Age`, `Parch` i `Fare`) la seva mitjana és diferent segons si es mesura sobre la mostra de passatgers sobrevivents o no sobrevivents. A continuació es visualitza la distribució d'aquestes variables en ambdues mostres.
+Sobre les variables numèriques, s'ha pogut comprovar com per algunes d'aquestes (`Age`, `Parch` i `Fare`) la seva mitjana és diferent segons si es mesura sobre la mostra de passatgers sobrevivents o no sobrevivents. A continuació es visualitza la distribució d'aquestes variables en ambdues mostres.
 
 ```{r cont_visualization, echo=FALSE, results=FALSE, message=FALSE}
 library(plyr)
@@ -402,7 +402,7 @@ grid.arrange(p1, p2, p3, p4, p5, p6, ncol=2)
 
 ```
 
-Quant a les variables categoriques, totes elles presenten una distribució diferent segons si s'observen per a la mostra de sobrevivents o no sobrevivents. A les seguents visualitzacions es mostren les distribucions d'aquestes variables per les dues mostres.
+Quant a les variables categòriques, totes elles presenten una distribució diferent segons si s'observen per a la mostra de sobrevivents o no sobrevivents. A les següents visualitzacions es mostren les distribucions d'aquestes variables per les dues mostres.
 
 ```{r cat_visualization, echo=FALSE, results=FALSE, message=FALSE}
 
@@ -434,9 +434,9 @@ grid.arrange(p5, p6, p7, p8, ncol=2)
 De les proves de contrast i les visualitzacions sobre les variables es poden extreure diverses conclusions:
 
 * `AgeCat`: els passatgers entre 0 i 20 anys tenen més probabilitat de sobreviure mentre que els majors de 60 són els que ho tenen més difícil.
-* `Parch` i `FamilySizeCat`: les persones que viatjen soles tenen menys probabilitat de supervivència. Les families d'entre 2 i 4 persones tenen més probabilitat de supervivència, així com les persones que viatjen amb d'entre 1 i 3 familiars del tipus pare/fill.
-* `Fare`, `Pclass` i `CabinLetter`: els passatgers de primera classe o que han pagat més pel seu bitllet tenen més probabilitat de spuervivència. A més, les persones que viatjen en una cabina sobreviuen més que la resta.
+* `Parch` i `FamilySizeCat`: les persones que viatgen soles tenen menys probabilitat de supervivència. Les famílies d'entre 2 i 4 persones tenen més probabilitat de supervivència, així com les persones que viatjen amb d'entre 1 i 3 familiars del tipus pare/fill.
+* `Fare`, `Pclass` i `CabinLetter`: els passatgers de primera classe o que han pagat més pel seu bitllet tenen més probabilitat de supervivència. A més, les persones que viatgen en una cabina sobreviuen més que la resta.
 * `Sex` i `TitleCat`: els homes adults tenen menys probabilitat de supervivència que les dones. Les dones casades tenen una mica més de probabilitat de sobreviure que les que no ho estan.
 
-D'altra banda, el model de regressió logística construit sobre les dades preprocessades aconsegueix predir correctament el 77.75% del conjunt de test. Es pot considerar un resultat prou satisfactori donat que les dades contenen un soroll inherent al problema que no és possible predir amb les variables de les que es disposen. L'exactitud del model demostra com els factors estudiats tenen una influència real en les probabilitats de supervivència dels passatgers del Titanic, reflexant els comportaments i valors estructurals de la societat de l'època. 
+D'altra banda, el model de regressió logística construït sobre les dades preprocessades aconsegueix predir correctament el 77.75% del conjunt de test. Es pot considerar un resultat prou satisfactori donat que les dades contenen un soroll inherent al problema que no és possible predir amb les variables de les que es disposen. L'exactitud del model demostra com els factors estudiats tenen una influència real en les probabilitats de supervivència dels passatgers del Titanic, reflectint els comportaments i valors estructurals de la societat de l'època. 
 
